@@ -31,6 +31,7 @@
  - added clone feature for items (mjoel/goffy)
  - update test data (mamba/goffy)
  - added start/limit handling (goffy)
+ - replace tab by 4 spaces during creation (goffy)
 
 <h5>3.04 Final   [2020-11-11]</h5>  Dev: XOOPS 2.5.11, PHP 7.4.5
 <hr>
